user registeration and frontend bottombar added

--- a/frontend_wall/css/top_bar.css
+++ b/frontend_wall/css/top_bar.css
@@ -118,7 +118,36 @@ span.psw {
     }
 }
 
+ul.bottombar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
 
 ul.topbar {
     position: fixed;
@@ -154,4 +183,19 @@ li a:hover {
 
 .form{
     padding: 20px;
+}
+li.bottombar{
+	width: 90%;
+	top:0px;
+    height:100%;
+}
+input.bottombar {
+	color:grey;
+    top:0px;
+    height:48px;
+    font-size:32px;
+    width: 100%; 
+    display: block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
